
0.9.9g Jan 17, 2005
 * moved slapt-get from /sbin to /usr/sbin
 * show packages excluded in transaction report when --remove-obsolete hits
   excluded packages
 * changed global_config unsigned integers to bool typedef
 * added bool free_pkgs member to pkg_list struct so all pkg_lists are free'd
   uniformly using free_pkg_list, even if their pkg list is pointers to pkg
   objects in other lists
 * made required, conflicts, and suggests into dynamically allocated strings
   for package objects, and upped their max size to 2048
 * inlined init_pkg()
 * added missing fclose() calls in read_rc_config() and read_head_cache()
 * added missing free for getline buffer in get_md5sum() and update_pkg_cache()
 * fixed exclude parsing regression, adding any trailing commas
 * added --compile script to FAQ, contributed by Piotr Simon
 * added missing free for tmp required_of_required_by pkg_list structure in
   required_by()
 * added missing free_regex() calls in parse_meta_entry()
 * deps of pkg that conflict are now set to remove just like when conflicts of
   requested pkg to install are detected
 * fixed bug where conflict of a dep might slip through and allow the requested
   package to successfully be installed
 * fixed segfault when cleaning up if EXCLUDE is not defined within slapt-getrc
 * removed bad use of strcspn() breaking using ROOT env var with slapt-get

0.9.9f Jan 12, 2005
 * all malloc and calloc calls are now wrapped in slapt_malloc and slapt_calloc
 * added a few missing free() calls, and a missing closedir() call in
   working_dir_init()
 * exclude now searches on package location, so you can exclude disk
   sets as well
 * rewrote "Why yet another package management tool for Slackware?" and
   "What about package dependencies?" in FAQ
 * added a 'Getting started' section to the README
 * misc code updates
 * if resume of pkg download is not supported by remote server or proxy,
   remove partial file and try again